ci: finalize Blue/Green deployment pipeline and sync ECS service names

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,9 +55,8 @@ jobs:
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: ${{ env.ECS_SERVICE }}
-        cluster: ${{ env.ECS_CLUSTER }}
-        wait-for-service-stability: true
+        # Remove service/cluster if CodeDeploy is handling the routing
         codedeploy-appspec: appspec.json
         codedeploy-application: StrapiApp
         codedeploy-deployment-group: strapi-dg-sagar
+        wait-for-service-stability: true
